# farkel

./: README.md  analysis.ipynb  main.py  pyproject.toml  test_score.py
